infra/global/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hybrid-image-editor
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hybrid-image-editor.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hybrid-image-editor
                port:
                  number: 80
